# MAARCO

./: Cargo.toml  Cross.toml  Dockerfile  README.md  main.py  pyproject.toml
examples/: custom_ntrip.py  custom_ntrip.rs  decode_log_file.py  motor_control.py  motor_control.tcss  predicted_speed.py  read_serial_data.py  read_serial_usb.py  stream_nmea_data.py  tcp_server.py
field_tests/lake_johnson/: east.gpx  north.gpx
field_tests/volleyball/: 0ft.gpx  3ft.gpx  3ft_no_ground_plane.gpx  5ft.gpx
scripts/: dash_graph.py  proxy_stream.py  stream_nmea_data.py
src/: display.rs  gps_serial.rs  logging.rs  main.rs  ntrip.rs  serial.rs  usb_serial.rs
src/gps/: parser.rs
